--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -83,6 +83,22 @@
                     </li>
                 </ul>
             </li>
+
+            <li>
+                <a href="#">
+                    <i class="fa fa-user"></i>
+                    <span class="nav-label">会员管理</span>
+                    <span class="fa arrow"></span>
+                </a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/member/lst')}">会员列表</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/member/clearimg')}">清除无效图片</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
 </nav>
