--- a/application/index/view/public/footer.html
+++ b/application/index/view/public/footer.html
@@ -35,7 +35,7 @@ $('#feedback').on('click', function(){
 <div class="footbox">
   <div class="footleft">
     <p class="foottop">
-                    <a href="/simcms/index.php" title="首页" class="whiteA f14 pl10 pr10">首页</a> |
+                    <a href="{:url('index/index/index')}" title="首页" class="whiteA f14 pl10 pr10">首页</a> |
                     <a href="/simcms/index.php?m=search" title="我要买车" class="whiteA f14 pl10 pr10">我要买车</a> |
                     <a href="/simcms/index.php?m=user&a=addcar" title="我要卖车" class="whiteA f14 pl10 pr10">我要卖车</a> |
                     <a href="/simcms/index.php?m=assesscar" title="车价评估" class="whiteA f14 pl10 pr10">车价评估</a> |
