--- a/application/admin/view/news/lst.html
+++ b/application/admin/view/news/lst.html
@@ -49,10 +49,10 @@
                                 <tbody>
                                     {volist name="news" id="vo"}
                                     <tr>
-                                        <td>{$vo.id}</td>
-                                        <td></td>
+                                        <td>{$vo.nid}</td>
+                                        <td><a href="{:url('index/news/newsdetails',array('id'=>$vo.nid))}">{$vo.title|msubstr=0,10,'utf8',true}</a></td>
                                         <td>{$vo.author}</td>
-                                        <td>{$vo.pid}</td>
+                                        <td>{$vo.name}</td>
                                         <td>{$vo.addtime|date="Y-m-d h:i:s"}</td>
                                         <td>{$vo.updtime|date="Y-m-d h:i:s"}</td>
                                         <td>{$vo.clicks}</td>
@@ -61,11 +61,9 @@
                                                 <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="true">操作 <span class="caret"></span>
                                                 </button>
                                                 <ul class="dropdown-menu">
-                                                    <li><a href="">添加子分类</a>
+                                                    <li><a href="{:url('admin/news/upd',array('id'=>$vo.nid))}">修改</a>
                                                     </li>
-                                                    <li><a href="">修改</a>
-                                                    </li>
-                                                    <li><a href="">删除</a>
+                                                    <li><a href="javascript:if(confirm('确认删除么？')) location='{:url('admin/news/del',array('id'=>$vo.nid))}'">删除</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -75,14 +73,6 @@
                                 </tbody>
                             </table>
                             {$news|raw}
-                            <div class="row">
-                                <div class="col-sm-2">
-                                    <button class="btn btn-success" type="button" id="changeOrder">
-                                        <i class="fa fa-plus-square"></i>&nbsp;&nbsp;
-                                        <span class="bold">排序</span>
-                                    </button>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
