--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -18,6 +18,13 @@
                 },
                 member_password:{
                     required:true,
+                },
+                captcha:{
+                    required:true,
+                    remote:{
+                        url:"{:url('index/login/checkcapcha')}",
+                        type:"post"
+                    }
                 }
             },
             messages:{
@@ -27,9 +34,19 @@
                 },
                 member_password:{
                     required:"请输入密码"
+                },
+                captcha:{
+                    required:"请输入验证码",
+                    remote:"验证码不正确"
                 }
             }
-        })
+        });
+
+        $("#captcha").click(function(event) {
+            /* Act on the event */
+            // data = ;
+            this.src = "{:url('index/login/verify')}?"+Math.random();
+        });
     })
 
 </script>
@@ -48,6 +65,14 @@
                     <th>密&nbsp;&nbsp;&nbsp;码：</th>
                     <td><input type="password" name="member_password" class="inp01"/></td>
                 </tr>
+                <tr>
+                    <th>请输入验证码：</th>
+                    <td>
+                        <input type="text" name="captcha" class="inp01"/>
+                        <img src="{:url('index/login/verify')}" alt="验证码加载中" class="inp01" id="captcha"/>
+                    </td>
+                </tr>
+
                 <tr>
                     <th></th>
                     <td><input type="submit" class="login_but" value="登录"></td>
