--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -99,6 +99,22 @@
                     </li>
                 </ul>
             </li>
+
+            <li>
+                <a href="#">
+                    <i class="fa fa-users"></i>
+                    <span class="nav-label">管理员管理</span>
+                    <span class="fa arrow"></span>
+                </a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/admin/lst')}">管理员列表</a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem" href="">清除无效图片</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </div>
 </nav>
