--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -33,7 +33,7 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label">密码</label>
                                     <div class="col-sm-9">
-                                        <input name="password" class="form-control" placeholder="请输入密码" type="text">
+                                        <input name="password" class="form-control" placeholder="请输入密码" type="password">
                                     </div>
                                 </div>
                                 <div class="form-group">
