--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -108,6 +108,9 @@
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
+                        <a class="J_menuItem" href="{:url('admin/auth/lst')}">权限管理</a>
+                    </li>
+                    <li>
                         <a class="J_menuItem" href="{:url('admin/admin/lst')}">管理员列表</a>
                     </li>
                     <li>
