--- a/application/admin/view/auth/add.html
+++ b/application/admin/view/auth/add.html
@@ -1,5 +1,5 @@
 {extend name="base" /}
-{block name="title"}添加管理员{/block}
+{block name="title"}添加权限{/block}
 {block name="right"}
     <div class="row J_mainContent" id="content-main">
         <div class="row wrapper border-bottom white-bg page-heading">
@@ -7,10 +7,10 @@
                 <h2>管理员管理</h2>
                 <ol class="breadcrumb">
                     <li>
-                        <strong>管理员管理</strong>
+                        <strong>权限管理</strong>
                     </li>
                     <li>
-                        添加管理员
+                        添加权限
                     </li>
                 </ol>
             </div>
@@ -20,32 +20,41 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
 
-                        <form action="{:url('admin/admin/addhanddle')}"
+                        <form action="{:url('admin/auth/addhanddle')}"
                         method="post" class="form-horizontal row"
                         enctype="multipart/form-data" id="form1">
                             <div class="col-md-12">
+
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">管理员名称</label>
+                                    <label class="col-sm-3 control-label">上级权限</label>
                                     <div class="col-sm-9">
-                                        <input name="name" class="form-control" placeholder="请输入管理员名称" type="text">
+                                        <select class="form-control" name="pid">
+                                            <option value="0">顶级权限</option>
+                                            {volist name="auth" id="vo"}
+                                            <option value="{$vo.id}">{$vo.title}</option>
+                                            {/volist}
+                                        </select>
+
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label">权限名称</label>
+                                    <div class="col-sm-9">
+                                        <input name="title" class="form-control" placeholder="请输入权限名称" type="text">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">密码</label>
+                                    <label class="col-sm-3 control-label">对应方法</label>
                                     <div class="col-sm-9">
-                                        <input name="password" class="form-control" placeholder="请输入密码" type="password" id="password">
+                                        <input name="name" class="form-control" placeholder="请输入方法" type="text">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-3 control-label">确认密码</label>
-                                    <div class="col-sm-9">
-                                        <input name="repassword" class="form-control" placeholder="请再次输入密码" type="password">
-                                    </div>
-                                </div>
+
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label"></label>
                                     <div class="col-sm-3">
-                                        <input class="form-control" type="submit" value="添加管理员">
+                                        <input class="form-control" type="submit" value="添加权限">
                                     </div>
                                 </div>
                             </div>
@@ -67,36 +76,16 @@
             rules:{
                 name:{
                     required:true,
-                    rangelength:[1,10],
                     remote:{
-                        url:"{:url('admin/admin/checkNameAjax')}",
+                        url:"{:url('admin/auth/checkAuthNameAjax')}",
                         type:"post"
                     }
-                },
-                password:{
-                    required:true,
-                    rangelength:[6,10],
-                },
-                repassword:{
-                    required:true,
-                    rangelength:[6,10],
-                    equalTo:"#password"
                 },
             },
             messages:{
                 name:{
-                    required:"请输入管理员名称",
-                    rangelength:"名称长度在1-10之间",
-                    remote:"该名称已经存在"
-                },
-                password:{
-                    required:"请输入密码",
-                    rangelength:"密码长度在6-10位之间",
-                },
-                repassword:{
-                    required:"请再次输入密码",
-                    rangelength:"密码长度在6-10位之间",
-                    equalTo:"两次密码输入不一致"
+                    required:"请输入权限名称",
+                    remote:"该权限已经存在"
                 },
             }
         });
