--- a/application/admin/view/auth/lst.html
+++ b/application/admin/view/auth/lst.html
@@ -1,5 +1,5 @@
 {extend name="base" /}
-{block name="title"}管理员列表{/block}
+{block name="title"}权限列表{/block}
 
 {block name="right"}
     <div class="row J_mainContent" id="content-main" style="overflow-y:scroll">
@@ -8,10 +8,10 @@
                 <h2>管理员管理</h2>
                 <ol class="breadcrumb">
                     <li>
-                        <strong>管理员管理</strong>
+                        <strong>权限管理</strong>
                     </li>
                     <li>
-                        管理员列表
+                        权限列表
                     </li>
                 </ol>
             </div>
@@ -20,7 +20,7 @@
             <div class="col-sm-2">
                 <button class="btn btn-success" type="button" id="addAdmin">
                     <i class="fa fa-plus-square"></i>&nbsp;&nbsp;
-                    <span class="bold">添加管理员</span>
+                    <span class="bold">添加权限</span>
                 </button>
             </div>
             <div class="col-sm-10">
@@ -34,15 +34,17 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>级别名称</th>
+                                    <th>权限名称</th>
+                                    <th>对应方法</th>
                                     <th>状态</th>
                                     <th>操作</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {volist name="admin" id="vo"}
+                                {volist name="auth" id="vo"}
                                 <tr>
                                     <td>{$vo.id}</td>
+                                    <td>{$vo.title}</td>
                                     <td>{$vo.name}</td>
                                     <td>
                                         {if $vo.status==1}
@@ -56,14 +58,40 @@
                                             <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="true">操作 <span class="caret"></span>
                                             </button>
                                             <ul class="dropdown-menu">
-                                                <li><a href="">修改</a>
+                                                <li><a href="{:url('admin/auth/upd',array('id'=>$vo.id))}">修改</a>
                                                 </li>
-                                                <li><a href="">删除</a>
+                                                <li><a href="javascript:if(confirm('确认删除？')) location='{:url('admin/auth/del',array('id'=>$vo.id))}'">删除</a>
                                                 </li>
                                             </ul>
                                         </div>
                                     </td>
                                 </tr>
+                                {volist name="$vo.children" id="vo1"}
+                                <tr>
+                                    <td>{$vo1.id}</td>
+                                    <td>|——{$vo1.title}</td>
+                                    <td>{$vo1.name}</td>
+                                    <td>
+                                        {if $vo1.status==1}
+                                        启用
+                                        {else/}
+                                        禁用
+                                        {/if}
+                                    </td>
+                                    <td>
+                                        <div class="btn-group open">
+                                            <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="true">操作 <span class="caret"></span>
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="{:url('admin/auth/upd',array('id'=>$vo1.id))}">修改</a>
+                                                </li>
+                                                <li><a href="javascript:if(confirm('确认删除？')) location='{:url('admin/auth/del',array('id'=>$vo1.id))}'">删除</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                {/volist}
                                 {/volist}
                             </tbody>
 
@@ -81,7 +109,7 @@
 <script src="__ADMIN__/js/plugins/pace/pace.min.js"></script>
 <script type="text/javascript">
     $("#addAdmin").click(function(event) {
-        window.location="{:url('admin/admin/add')}"
+        window.location="{:url('admin/auth/add')}"
     });
 </script>
 {/block}
