--- a/application/admin/view/public/left.html
+++ b/application/admin/view/public/left.html
@@ -110,6 +110,11 @@
                     <li>
                         <a class="J_menuItem" href="{:url('admin/auth/lst')}">权限管理</a>
                     </li>
+
+                    <li>
+                        <a class="J_menuItem" href="{:url('admin/group/lst')}">组管理</a>
+                    </li>
+
                     <li>
                         <a class="J_menuItem" href="{:url('admin/admin/lst')}">管理员列表</a>
                     </li>
