--- a/application/admin/view/admin/change_password.html
+++ b/application/admin/view/admin/change_password.html
@@ -1,5 +1,5 @@
 {extend name="base" /}
-{block name="title"}添加管理员{/block}
+{block name="title"}修改管理员密码{/block}
 {block name="right"}
     <div class="row J_mainContent" id="content-main">
         <div class="row wrapper border-bottom white-bg page-heading">
@@ -10,7 +10,7 @@
                         <strong>管理员管理</strong>
                     </li>
                     <li>
-                        添加管理员
+                        修改管理员密码
                     </li>
                 </ol>
             </div>
@@ -20,14 +20,15 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
 
-                        <form action="{:url('admin/admin/addhanddle')}"
+                        <form action="{:url('admin/admin/changePasswordHanddle')}"
                         method="post" class="form-horizontal row"
                         enctype="multipart/form-data" id="form1">
+                        <input type="hidden" name="id" value="{$admin.id}">
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label">管理员名称</label>
                                     <div class="col-sm-9">
-                                        <input name="name" class="form-control" placeholder="请输入管理员名称" type="text">
+                                        <input name="name" class="form-control" value="{$admin.name}" type="text" readonly>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -43,40 +44,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label">选择组</label>
-                                    <div class="col-sm-9">
-                                        <table class="table table-bordered">
-                                            <thead>
-                                                <tr>
-                                                    <th>组名称</th>
-                                                    <th>拥有权限</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                {volist name="group" id="vo"}
-                                                <tr>
-                                                    <td>
-                                                        <label for="">
-                                                            {$vo.title}<input type="checkbox" name="groups[]" value="{$vo.id}"></td>
-                                                        </label>
-                                                    <td>
-                                                    {volist name="$vo.rule_array" id="vo1"}
-                                                    权限名称：{$vo1.title}&nbsp;&nbsp;
-                                                    对应规则：{$vo1.name}<br/>
-                                                    {/volist}
-                                                    </td>
-                                                </tr>
-                                                {/volist}
-                                            </tbody>
-
-                                        </table>
-                                    </div>
-
-                                </div>
-                                <div class="form-group">
                                     <label class="col-sm-3 control-label"></label>
                                     <div class="col-sm-3">
-                                        <input class="form-control" type="submit" value="添加管理员">
+                                        <input class="form-control" type="submit" value="修改管理员密码">
                                     </div>
                                 </div>
                             </div>
@@ -96,14 +66,6 @@
     $().ready(function(){
         $("#form1").validate({
             rules:{
-                name:{
-                    required:true,
-                    rangelength:[1,10],
-                    remote:{
-                        url:"{:url('admin/admin/checkNameAjax')}",
-                        type:"post"
-                    }
-                },
                 password:{
                     required:true,
                     rangelength:[6,10],
@@ -115,11 +77,6 @@
                 },
             },
             messages:{
-                name:{
-                    required:"请输入管理员名称",
-                    rangelength:"名称长度在1-10之间",
-                    remote:"该名称已经存在"
-                },
                 password:{
                     required:"请输入密码",
                     rangelength:"密码长度在6-10位之间",
