--- a/application/index/view/public/header.html
+++ b/application/index/view/public/header.html
@@ -1,4 +1,5 @@
 <link href="__INDEX__/default/css/index.css" rel="stylesheet" type="text/css"/>
+<link href="__INDEX__/default/css/car.css" rel="stylesheet" type="text/css"/>
 <link href="__INDEX__/default/css/user.css" rel="stylesheet" type="text/css"/>
 <link rel="shortcut icon" type="image/ico" href="__INDEX__/default/img/favicon.ico">
 <script type="text/javascript" src="__INDEX__/static/js/jquery.js"></script>
