--- a/application/index/view/public/navlist.html
+++ b/application/index/view/public/navlist.html
@@ -1,10 +1,10 @@
 <div class="nav_list">
     <ul class="clearfix">
                 <li>
-        <a href="/simcms/index.php" title="首页" class="here" >首页</a>
+        <a href="{:url('index/index/index')}" title="首页" class="here" >首页</a>
         </li>
                 <li>
-        <a href="/simcms/index.php?m=search" title="我要买车"  >我要买车</a>
+        <a href="{:url('index/buycars/index')}" title="我要买车"  >我要买车</a>
         </li>
                 <li>
         <a href="index.php?m=user&a=addcar" title="我要卖车"  target="_blank">我要卖车</a>
